--- a/src/app/components/common/menu-item/menu-item.component.html
+++ b/src/app/components/common/menu-item/menu-item.component.html
@@ -1,1 +1,16 @@
-<p>menu-item works!</p>
+<div class="card">
+  <div class="card-img">
+    <img src="https://via.placeholder.com/80" alt="name" />
+  </div>
+  <div class="card-details">
+    <h3 class="card-details-name">Item Name</h3>
+    <p class="card-details-description">
+      Lorem ipsum dolor, sit amet consectetur
+    </p>
+    <p class="card-details-price">Price</p>
+  </div>
+  <div class="card-actions">
+    <div class="card-actions-edit"><mat-icon>edit</mat-icon></div>
+    <div class="card-actions-delete"><mat-icon>delete</mat-icon></div>
+  </div>
+</div>
