--- a/src/app/components/menu-group-form/menu-group-form.component.html
+++ b/src/app/components/menu-group-form/menu-group-form.component.html
@@ -1,19 +1,20 @@
 <div class="form-container card">
   <h2 class="form-title">Enter Details for Menu Group</h2>
-  <form class="form">
+  <form class="form" [formGroup]="menuGroupForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline" class="form-name">
       <mat-label>Menu Group Name</mat-label>
-      <input matInput placeholder="Starter, Main Course..." />
+      <input matInput placeholder="Starter, Main Course..." formControlName="name"/>
     </mat-form-field>
 
     <div class="form-img-upload">
       <label for="group-img">Menu Group Image</label>
-      <input type="file" id="group-img" name="group-img" accept="image/*" />
+      <input type="file" id="group-img" name="group-img" accept="image/*" formControlName="imgSrc"/>
     </div>
 
     <div class="form-submit">
       <app-button
         text="Save New Group"
+        actionType="submit"
         [classList]="['bg-green-700', 'text-white']"
       ></app-button>
     </div>
