--- a/src/app/components/common/menu-item/menu-item.component.html
+++ b/src/app/components/common/menu-item/menu-item.component.html
@@ -14,7 +14,7 @@
     <div class="card-actions-edit" (click)="onEdit()">
       <mat-icon>edit</mat-icon>
     </div>
-    <div class="card-actions-delete"><mat-icon>delete</mat-icon></div>
+    <div class="card-actions-delete" (click)="onDelete()"><mat-icon>delete</mat-icon></div>
   </div>
 </div>
 <ng-container>
