--- a/src/app/components/menu-item-form/menu-item-form.component.html
+++ b/src/app/components/menu-item-form/menu-item-form.component.html
@@ -28,6 +28,7 @@
         name="item-img"
         accept="image/*"
         formControlName="imgSrc"
+        (change)="onFileChange($event)"
       />
     </div>
 
